@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html">
-    <style type="text/css">{% include "touching.css" %}</style>
+    <link rel='stylesheet' type='text/css' href='css'>
   </head>
   
   <body>
@@ -18,6 +18,7 @@
                 <li><a href='upload'>Upload an image</a></li>
                 <li><a href='image'>Show most recent image</a></li>
                 <li><a href='search'>Search for an image</a></li>
+                <li><a href='gallery'>List all images</a></li>
               </ul>
             </div>
           </div>
